--- a/index.html
+++ b/index.html
@@ -85,7 +85,9 @@
       </figure>
 
       <figure class="sidebar-item"> <img src="images/ai.jpg" alt="Fråga AI">
-        <figcaption><button class="btn btn-outline-secondary">Fråga AI</button></figcaption>
+        <figcaption><a href="https://chatgpt.com/g/g-67358f8c80548190924aafbd4846ae37-fertilitetsforstaelse"
+            class="btn btn-outline-secondary">Fråga AI</button></a>
+          <figcaption>
       </figure>
     </section>
 
