--- a/index.html
+++ b/index.html
@@ -1,36 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
+
+  <!-- Bootstrap -->
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
 
+  <!-- Egna stilar -->
   <link rel="stylesheet" href="css/styles.css">
+
+  <!-- Font -->
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap"
-    rel="stylesheet">
-
+  <link href="https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,700;1,400;1,700&display=swap" rel="stylesheet">
 </head>
 
-
 <body>
-  <!--Header-->
+  <!-- Header -->
   <header>
-    <!--Navbar från bootstrap-->
-
-    <!--Hamburgermeny på telefon vanlig på platta och datorskärm-->
+    <!-- Navbar -->
     <nav class="navbar navbar-expand-md bg-body-tertiary">
-
-
       <div class="container-fluid">
-
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup"
           aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
+
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
             <a class="nav-link active" aria-current="page" href="index.html">Startsida</a>
@@ -38,41 +35,33 @@
             <a class="nav-link" href="#">Bloggar</a>
             <a class="nav-link" href="om.html">Om</a>
             <a class="nav-link" href="#">Kontakt</a>
-
-
           </div>
         </div>
       </div>
     </nav>
-    <h1 class="h1 text-center">Regnbågsbarn</h1> <!--Centrerar rubriken inne i headern-->
 
+    <!-- Titel -->
+    <h1 class="h1 text-center">Regnbågsbarn</h1>
   </header>
+
+  <!-- Main -->
   <main class="container layout pt-4 pt-md-5">
-    <!--Skapar luft på toppen i mobil och tablet/desktop döper min egen till layout för att undvika krock med bootstrap-->
+    <!-- Intro -->
     <section class="intro">
       <img src="images/jag.jpg" alt="jag och nico" class="jag">
 
       <div class="intro-text">
         <h2>Jag skapade Regnbågsbarn för att jag saknade det forumet</h2>
-
-
         Välkommen till Regnbågsbarn! Denna plattform ville jag som grundare starta för alla föräldrar till regnbågsbarn
-        och
-        människor som kämpar med,
-        ofrivillig barnlöshet<p>Här kan du bland annat läsa historier om andra som kämpar och lyckliga
-          historier
-          om hur några till slut fått sina älskade barn.</p>
+        och människor som kämpar med, ofrivillig barnlöshet
+        <p>Här kan du bland annat läsa historier om andra som kämpar och lyckliga historier om hur några till slut fått sina älskade barn.</p>
         <p>En plats för både sorg och glädje</p>
-        <p>Följ våra bloggare, prata med vår läkare, barnmorska eller
-          vår AI
-          speciellt framtagen för frågor kring fertilitet.</p>
-        <p>Här finns inga pekpinnar eller skuldbeläggande om att du ätit
-          fel saker, här kan du bara andas.</p>
+        <p>Följ våra bloggare, prata med vår läkare, barnmorska eller vår AI speciellt framtagen för frågor kring fertilitet.</p>
+        <p>Här finns inga pekpinnar eller skuldbeläggande om att du ätit fel saker, här kan du bara andas.</p>
       </div>
-
     </section>
 
-    <!--här ska mina bilder vara för fråga läkaren skapar figure så att bild och text sitter ihop-->
+    <!-- Sidebar -->
     <section class="sidebar">
       <figure class="sidebar-item">
         <img src="images/doktor.jpg" alt="Fråga läkare">
@@ -84,19 +73,19 @@
         <figcaption><button class="btn btn-outline-secondary">Fråga Barnmorska</button></figcaption>
       </figure>
 
-      <figure class="sidebar-item"> <img src="images/ai.jpg" alt="Fråga AI">
-        <figcaption><a href="https://chatgpt.com/g/g-67358f8c80548190924aafbd4846ae37-fertilitetsforstaelse"
-            class="btn btn-outline-secondary">Fråga AI</button></a>
-          <figcaption>
+      <!-- FIX: inga knappar inuti länkar + rätt stängning av taggar -->
+      <figure class="sidebar-item">
+        <img src="images/ai.jpg" alt="Fråga AI">
+        <figcaption>
+          <a href="https://chatgpt.com/g/g-67358f8c80548190924aafbd4846ae37-fertilitetsforstaelse" class="btn btn-outline-secondary">
+            Fråga AI
+          </a>
+        </figcaption>
       </figure>
     </section>
 
-
-    <!--Mina fyra bilder/länkar-->
-
-    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 tiles"> <!--Tiles i slutet kan jag referera till i css-->
-
-
+    <!-- Tiles / kort -->
+    <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 tiles">
       <!-- Kort 1 -->
       <div class="col">
         <div class="card h-100">
@@ -145,18 +134,11 @@
         </div>
       </div>
     </div>
-
-
-
-
-
   </main>
 
-  <footer>
+  <footer></footer>
 
-  </footer>
+  <!-- Bootstrap JS -->
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
-
 </html>
