Stylar till så rätt foto är på vi kämpar med rätt text

--- a/vi-som-kampar.html
+++ b/vi-som-kampar.html
@@ -55,10 +55,10 @@
       <!-- Kort 1 -->
       <div class="col">
         <div class="card h-100">
-          <img src="images/rainbow.jpg" class="card-img-top" alt="regnbåge">
+          <img src="images/rainbow2.jpg" class="card-img-top" alt="regnbågsfluff">
           <div class="card-body">
-            <h5 class="card-title">Regnbågsbarn</h5>
-            <p class="card-text">Berättelser om regnbågsbarn vi minns.</p>
+            <h5 class="card-title">Ofrivillig barnlöshet</h5>
+            <p class="card-text">Fem år av ofrivillig barnlöshet, utan några barn</p>
             <button class="btn btn-outline-secondary">Läs mer</button>
           </div>
         </div>
@@ -67,11 +67,11 @@
       <!-- Kort 2 -->
       <div class="col">
         <div class="card h-100">
-          <img src="images/nicolycklig.jpg" class="card-img-top" alt="Nico glad">
+          <img src="images/fog.jpg" class="card-img-top" alt="Himmel">
           <div class="card-body">
-            <h5 class="card-title">Lyckliga historier</h5>
-            <p class="card-text">Berättelser om människor som lyckats få sitt barn.</p>
-            <a href="lyckliga-historier.html" class="btn btn-outline-secondary">Läs mer</a>
+            <h5 class="card-title">Upprepade missfall</h5>
+            <p class="card-text">Karin har fått åtta missfall och har ännu inga barn.</p>
+            <button class="btn btn-outline-secondary">Läs mer</button>
           </div>
         </div>
       </div>
@@ -79,10 +79,10 @@
       <!-- Kort 3 -->
       <div class="col">
         <div class="card h-100">
-          <img src="images/diskussion.jpg" class="card-img-top" alt="diskussion">
+          <img src="images/candle.jpg" class="card-img-top" alt="ljus">
           <div class="card-body">
-            <h5 class="card-title">Diskussionsforum</h5>
-            <p class="card-text">Ett forum för stöttning och pepp.</p>
+            <h5 class="card-title">PCOS</h5>
+            <p class="card-text">Inga behandlingar hjälper</p>
             <button class="btn btn-outline-secondary">Läs mer</button>
           </div>
         </div>
@@ -93,8 +93,8 @@
         <div class="card h-100">
           <img src="images/sky.jpg" class="card-img-top" alt="himmel">
           <div class="card-body">
-            <h5 class="card-title">Vi som kämpar</h5>
-            <p class="card-text">Historier om människor som kämpar med ofrivillig barnlöshet på olika vis.</p>
+            <h5 class="card-title">"Inga fel"</h5>
+            <p class="card-text">Läkarna upprepar att allt ser bra ut och ingenting är fel, men ändå får vi inget barn.</p>
             <a href="vi-som-kampar.html" class="btn btn-outline-secondary">Läs mer</a>
           </div>
         </div>
