Lagt in korrekt bilder

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
     </nav>
 
     <!-- Titel -->
-    <h1 class="h1 text-center">Regnbågsbarn</h1>
+    <h1>Regnbågsbarn</h1>
   </header>
 
   <!-- Main -->
