--- a/lyckliga-historier.html
+++ b/lyckliga-historier.html
@@ -44,11 +44,13 @@
         </div>
       </div>
     </nav>
-    <h1 class="h1 text-center">Regnbågsbarn</h1> <!--Centrerar rubriken inne i headern-->
+    <h1>Regnbågsbarn</h1> 
 
   </header>
   <main class="container layout pt-4 pt-md-5">
     <!--Skapar luft på toppen i mobil och tablet/desktop döper min egen till layout för att undvika krock med bootstrap-->
+
+    <h2>Lyckliga historier</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 tiles"> <!--Tiles i slutet kan jag referera till i css-->
 
 
@@ -57,8 +59,8 @@
         <div class="card h-100">
           <img src="images/nicolycklig.jpg" class="card-img-top" alt="regnbåge">
           <div class="card-body">
-            <h5 class="card-title">Regnbågsbarn</h5>
-            <p class="card-text">Berättelser om regnbågsbarn vi minns.</p>
+            <h5 class="card-title">Nico</h5>
+            <p class="card-text">Efter 1 1/2 år kom Nico</p>
             <button class="btn btn-outline-secondary">Läs mer</button>
           </div>
         </div>
@@ -69,8 +71,8 @@
         <div class="card h-100">
           <img src="images/baby1.jpg" class="card-img-top" alt="Nico glad">
           <div class="card-body">
-            <h5 class="card-title">Lyckliga historier</h5>
-            <p class="card-text">Berättelser om människor som lyckats få sitt barn.</p>
+            <h5 class="card-title">Matheo</h5>
+            <p class="card-text">Matheo kom efter hjälp i Danmark</p>
             <a href="lyckliga-historier.html" class="btn btn-outline-secondary">Läs mer</a>
           </div>
         </div>
@@ -81,8 +83,8 @@
         <div class="card h-100">
           <img src="images/baby2.jpg" class="card-img-top" alt="diskussion">
           <div class="card-body">
-            <h5 class="card-title">Diskussionsforum</h5>
-            <p class="card-text">Ett forum för stöttning och pepp.</p>
+            <h5 class="card-title">Zowi</h5>
+            <p class="card-text">Zowi skulle aldrig överleva utanför magen</p>
             <button class="btn btn-outline-secondary">Läs mer</button>
           </div>
         </div>
@@ -93,8 +95,8 @@
         <div class="card h-100">
           <img src="images/baby3.jpg" class="card-img-top" alt="himmel">
           <div class="card-body">
-            <h5 class="card-title">Vi som kämpar</h5>
-            <p class="card-text">Historier om människor som kämpar med ofrivillig barnlöshet på olika vis.</p>
+            <h5 class="card-title">Milo</h5>
+            <p class="card-text">Efter tio oförklarliga missfall kom Milo.</p>
             <a href="vi-som-kampar.html" class="btn btn-outline-secondary">Läs mer</a>
           </div>
         </div>
