--- a/om.html
+++ b/om.html
@@ -44,17 +44,18 @@
         </div>
       </div>
     </nav>
-    <h1 class="h1 text-center">Regnbågsbarn</h1> <!--Centrerar rubriken inne i headern-->
+    <h1>Regnbågsbarn</h1> 
 
   </header>
   <main class="container layout pt-4 pt-md-5">
     <!--Skapar luft på toppen i mobil och tablet/desktop döper min egen till layout för att undvika krock med bootstrap-->
 
-    <section class="intro">
+    <section class="about">
+      <h2>Om oss</h2>
       <img src="images/pregnant.jpg" alt="pregnant">
 
       <div class="intro-text">
-        <h2>Om oss</h2>
+       
 
 
         Regnbågsbarn grundades 2025 av mig Susanna Carlsson. Min och min mans väg till ett barn har varit lång och
