--- a/index.html
+++ b/index.html
@@ -46,7 +46,9 @@
   </header>
 
   <!-- Main -->
-  <main class="container layout pt-4 pt-md-5">
+  <main class="container-fluid py-4 main-band">
+    <div class="container layout pt-0 pt-md-1">
+
     <!-- Intro -->
     <section class="intro">
       <img src="images/jag.jpg" alt="jag och nico" class="jag">
@@ -135,6 +137,7 @@
         </div>
       </div>
     </div>
+  </div>
   </main>
 
   <footer>
