--- a/om.html
+++ b/om.html
@@ -47,7 +47,8 @@
     <h1>Regnbågsbarn</h1> 
 
   </header>
-  <main class="container layout pt-4 pt-md-5">
+  <main class="container-fluid py-4 main-band">
+    <div class="container layout pt-0 pt-md-1">
     <!--Skapar luft på toppen i mobil och tablet/desktop döper min egen till layout för att undvika krock med bootstrap-->
 
     <section class="about">
@@ -73,7 +74,7 @@
 
     </section>
 
-
+</div>
   </main>
 
   <footer>
