--- a/vi-som-kampar.html
+++ b/vi-som-kampar.html
@@ -47,7 +47,8 @@
     <h1>Regnbågsbarn</h1> <!--Centrerar rubriken inne i headern-->
 
   </header>
-  <main class="container layout pt-4 pt-md-5">
+  <main class="container-fluid py-4 main-band">
+    <div class="container layout pt-0 pt-md-1">
     <!--Skapar luft på toppen i mobil och tablet/desktop döper min egen till layout för att undvika krock med bootstrap-->
     <h2>Vi som kämpar</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 tiles"> <!--Tiles i slutet kan jag referera till i css-->
@@ -102,7 +103,7 @@
       </div>
     </div>
 
-
+</div>
   </main>
 
   <footer>
