la till sökruta

--- a/lyckliga-historier.html
+++ b/lyckliga-historier.html
@@ -36,9 +36,14 @@
             <a class="nav-link" href="#">Berättelser</a>
             <a class="nav-link" href="#">Bloggar</a>
             <a class="nav-link" href="om.html">Om</a>
-            <a class="nav-link" href="#">Kontakt</a>
+            <a class="nav-link" href="kontakt.html">Kontakt</a>
           </div>
         </div>
+
+        <form class="d-flex me-3" role="search">
+          <input class="form-control form-control-sm" type="search" placeholder="Sök..." aria-label="Sök">
+          <button class="btn btn-outline-secondary btn-sm ms-2" type="submit">Sök</button>
+        </form>
     
         <!-- 🔹 Logga längst till höger -->
         <a href="index.html" class="navbar-brand ms-auto">
