--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         och människor som kämpar med, ofrivillig barnlöshet
         <p>Här kan du bland annat läsa historier om andra som kämpar och lyckliga historier om hur några till slut fått sina älskade barn.</p>
         <p>En plats för både sorg och glädje</p>
-        <p>Följ våra bloggare, prata med vår läkare, barnmorska eller vår AI speciellt framtagen för frågor kring fertilitet.</p>
+        <p>Följ våra bloggare, prata med vår läkare, barnmorska eller vår fertilitetes-AI skapad av Emma Hager för frågor kring fertilitet.</p>
         <p>Här finns inga pekpinnar eller skuldbeläggande om att du ätit fel saker, här kan du bara andas.</p>
       </div>
     </section>
