--- a/vi-som-kampar.html
+++ b/vi-som-kampar.html
@@ -55,12 +55,12 @@
       </div>
     </nav>
     
-    <h1>Regnbågsbarn</h1> <!--Centrerar rubriken inne i headern-->
+    <h1>Regnbågsbarn</h1> 
 
   </header>
   <main class="container-fluid py-4 main-band">
     <div class="container layout pt-0 pt-md-1">
-    <!--Skapar luft på toppen i mobil och tablet/desktop döper min egen till layout för att undvika krock med bootstrap-->
+
     <h2>Vi som kämpar</h2>
     <div class="row row-cols-1 row-cols-md-2 row-cols-lg-4 g-4 tiles"> <!--Tiles i slutet kan jag referera till i css-->
 
