Justerar kommentarer och kod

--- a/lyckliga-historier.html
+++ b/lyckliga-historier.html
@@ -39,7 +39,7 @@
             <a class="nav-link" href="kontakt.html">Kontakt</a>
           </div>
         </div>
-
+<!--Sökruta-->
         <form class="d-flex me-3" role="search">
           <input class="form-control form-control-sm" type="search" placeholder="Sök..." aria-label="Sök">
           <button class="btn btn-outline-secondary btn-sm ms-2" type="submit">Sök</button>
