Tog bort active på lyckliga historier och vi som kämpar

--- a/vi-som-kampar.html
+++ b/vi-som-kampar.html
@@ -34,7 +34,7 @@
         <!-- Menylänkarna -->
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" aria-current="page" href="index.html">Startsida</a>
+            <a class="nav-link" href="index.html">Startsida</a>
             <a class="nav-link" href="#">Berättelser</a>
             <a class="nav-link" href="#">Bloggar</a>
             <a class="nav-link" href="om.html">Om</a>
