--- a/lyckliga-historier.html
+++ b/lyckliga-historier.html
@@ -32,7 +32,7 @@
         <!-- Menylänkar -->
         <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
           <div class="navbar-nav">
-            <a class="nav-link active" href="index.html">Startsida</a>
+            <a class="nav-link" href="index.html">Startsida</a>
             <a class="nav-link" href="#">Berättelser</a>
             <a class="nav-link" href="#">Bloggar</a>
             <a class="nav-link" href="om.html">Om</a>
